--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -22,3 +22,9 @@
   id: person
   avatar: /profile-pic.jpg
   bio: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quidem.
+
+-
+  id: yeyeli
+  name: 叶业力
+  avatar: /profile-pic.jpg
+  bio: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quidem.
