--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -27,4 +27,8 @@
   id: yeyeli
   name: 叶业力
   avatar: /profile-pic.jpg
-  bio: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quidem.
+  bio: this is some more information about the author.
+  facebook: https://www.facebook.com/someone
+  twitter: https://twitter.com/someone
+  instagram: http://instagram.com/someone
+  email: someone@something.com
