--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 full_rebuild: true
-name: 业力实验室
+name: Yeli Photo
 description: 此博客主要是收集我的户外游记、摄影摄像作品, 以及编程笔记等内容
 destination: jekyllbuild
 url: #place url
